Fixed Horizontal Scrollbar Issue

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #FFBF69
+    background-color: #FFBF69;
+    overflow-x: hidden;
 }
 
 .center-card {
